--- a/views/global/header.ejs
+++ b/views/global/header.ejs
@@ -2,6 +2,8 @@
 	<div id="header">
 		<div id="logout_div">
 			<span id="headerGreeter"></span>
+            <a id ="headerEdit" class="link"></a>
+            |
 			<a id ="headerLogout" class="link"></a>
 		</div>
 		<h1><a href="/" class="headerlink">P, R, S: Showdown</a></h1>
