--- a/views/user_details.ejs
+++ b/views/user_details.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>P,R,S - User Details</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="../../styles/style.css">
  </head>
 
 <body>
@@ -22,9 +22,7 @@
 </form>
     <br>
   </div>
-  <footer>
-    Brought to you by the cool kids of Software Engineering - Fall, 2018.
-  </footer>
-  <script src="scripts/scripts.js"></script>
+  <% include global/footer %>
+  <script src="../../scripts/scripts.js"></script>
  </body>
 </html>
