--- a/views/global/header.ejs
+++ b/views/global/header.ejs
@@ -2,9 +2,9 @@
 	<div id="header">
 		<div id="logout_div">
 			<span id="headerGreeter"></span>
-            <a id ="headerEdit" class="link"></a>
+            <a id ="headerEdit" class="link styledlink"></a>
             |
-			<a id ="headerLogout" class="link"></a>
+			<a id ="headerLogout" class="link styledlink"></a>
 		</div>
 		<h1><a href="/" class="headerlink">P, R, S: Showdown</a></h1>
 		<div id="nav_bar">
