--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,8 @@
 				Password:<input type="text" id="enter_password_input" name="player_password" required>
 				<button type="submit" id = "enter_name_button">Login</button>
 			</form>
+            <br>
+            <a class="styledlink" href="/">Create account</a>
 		</div>
 		<span id="userBox"><%for(var i=0;i<users.length;i++){%><%-users[i]%>,<%}%></span>
 		<% include global/footer %>
