--- a/views/user_details.ejs
+++ b/views/user_details.ejs
@@ -16,9 +16,9 @@
     <br>
       <form>
   First name:<br>
-  <input type="text" name="firstname" value="<%-user.name%>"><br>
+  <input type="text" name="firstname" value="<%-user.fname%>"><br>
   Last name:<br>
-  <input type="text" name="lastname" value="<%-user.password%>">
+  <input type="text" name="lastname" value="<%-user.fname%>">
 </form>
     <br>
   </div>
