--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -236,11 +236,10 @@ td {
 	filter: invert(18%) sepia(49%) saturate(6113%) hue-rotate(354deg) brightness(99%) contrast(129%)
 }
 
-a.headerlink:link,
-a.headerlink:visited {
+.styledlink{
 	color: blue
 }
 
-a.headerlink:hover {
+.styledlink:hover {
 	color: red
 }
