--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 				<button type="submit" id = "enter_name_button">Login</button>
 			</form>
             <br>
-            <a class="styledlink" href="/">Create account</a>
+            <a class="styledlink" href="/user/new">Create account</a>
 		</div>
 		<span id="userBox"><%for(var i=0;i<users.length;i++){%><%-users[i]%>,<%}%></span>
 		<% include global/footer %>
