--- a/views/user_details.ejs
+++ b/views/user_details.ejs
@@ -12,8 +12,8 @@
   <div id="feedback">
   </div>
   <div id="enter_name">
-    <h2>User Details<%if(locals.user){%> - <%-user.username%><%}%></h2>
-      <%if(locals.new){%><%=new.results%><%}%>
+    <h2>User Details <%if(locals.user){%><%-user.username%><%}%></h2>
+      
     <br>
       <form action="/users<%if(locals.user){%>/<%-user.username%><%}%>" method="<%if(locals.user){%>put<%}else{%>post<%}%>">
   First name:<br>
