--- a/views/global/header.ejs
+++ b/views/global/header.ejs
@@ -3,7 +3,7 @@
 		<div id="logout_div">
 			<span id="headerGreeter"></span>
             <a id ="headerEdit" class="link styledlink"></a>
-            |
+            <span id="headerDivider"></span>
 			<a id ="headerLogout" class="link styledlink"></a>
 		</div>
 		<h1><a href="/" class="headerlink">P, R, S: Showdown</a></h1>
