--- a/views/user_details.ejs
+++ b/views/user_details.ejs
@@ -13,7 +13,15 @@
   </div>
   <div id="enter_name" class="bodydiv">
 
-    <h2>User Details <%if(locals.user){%><%-user.name%><%}%></h2>
+    <h2>User Details<%if(locals.user){%>: <%-user.name%><%}%></h2>
+      
+      <%if(locals.user){%>
+      <br>
+      <u>Creation date</u>: <%= user.creationdate%>
+      <br><br>
+      <u>Last modified</u>: <%= user.lastupdate%><br>
+      <%}%>
+      
     <br>
       <form action="/users<%if(locals.user){%>/<%-user["name"]%>?_method=PUT<%}%>" method="<%if(locals.user){%>post<%}else{%>post<%}%>">
   First name:<br>
