--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 			<%if(locals.user){%>
 			<p><%=user.result%></p>
 			<%}else{%>
-			<p><%="Please log in or enter your desired username and password if you are a new user."%></p>
+			<p><%="Please log in."%></p>
 			<%}%>
 			<form action="/login" method="get">
 				Username:<input type="text" id="enter_name_input" name="player_name" required>
